愚人节活动样式调整

--- a/foolday2017/index.html
+++ b/foolday2017/index.html
@@ -25,9 +25,9 @@
 		<div class="label"></div>
 		<div class="longpress"></div>
 		<div class="center">
-			<div class="again"></div>
-			<div class="share"></div>
-			<div class="home hidden"></div>
+			<button class="again"></button>
+			<button class="share"></button>
+			<button class="home hidden"></button>
 		</div>
 		<div class="showluck hidden"></div>
 	</div>
