新增获取后台数据及完善页面

--- a/qingming2017/index.html
+++ b/qingming2017/index.html
@@ -7,6 +7,7 @@
 	<title>一株佛心莲花，寄予思念</title>
 	<embed src="" type="">
 	<link rel="stylesheet" href="css/index.css">
+	<link rel="stylesheet" href="css/font.TTF">
 	<script src="js/flexible.js"></script>
 	<script src="js/jquery.js"></script>
 	<script src="js/fastclick.js"></script>
@@ -15,6 +16,10 @@
 </head>
 <body>
 	<div class="index page1">
+		<div class="rain"></div>
+		<div class="rain1"></div>
+		<div class="rain2"></div>
+		
 		<div class="center"></div>    
 		<div class="btn">
 			<button class="plant"></button>			
