--- a/gameCenter/album.html
+++ b/gameCenter/album.html
@@ -20,7 +20,9 @@
         <div class="img ssimg"></div>
         <p class="des ss">纷繁乱世，重铸您的盛世霸业！</p>
         <div class="join ss">
-            <span class="numss">17983</span> 人参加
+            <div>
+                <span class="numss">17983</span>人参加
+            </div>        
             <a class="shengshi">点击进入游戏<img src="img/more_icon@2x.png"></a>
         </div>
     </div>
@@ -29,7 +31,9 @@
         <div class="img cqimg"></div>
         <p class="des cq">无需下载! 重现经典传奇，轻松挂机升级！</p>
         <div class="join cq">
-            <span class="numcq">90877 </span> 人参加
+            <div>
+                <span class="numcq">90877</span>人参加
+            </div>
             <a class="chuanqi">点击进入游戏<img src="img/more_icon@2x.png"></a>
         </div>
     </div>
@@ -38,17 +42,20 @@
         <div class="img hcimg"></div>
         <p class="des hc">冰火之战迫在眉睫，只有你才能阻止战争！</p>
         <div class="join hc">
-            <span class="numhc">19545 </span> 人参加
+            <div>
+                <span class="numhc">19545</span>人参加
+            </div>
             <a class="huancheng">点击进入游戏<img src="img/more_icon@2x.png"></a>
         </div>
     </div>
-    
     
     <div class="game kd">
         <div class="img kdimg"></div>
         <p class="des kd">皮卡丘酷炫雷电炸屏，谁才是最强召唤师！</p>
         <div class="join kd">
-            <span class="numkd">87345 </span> 人参加
+            <div>
+                <span class="numkd">87345</span>人参加
+            </div>
             <a class="koudai">点击进入游戏<img src="img/more_icon@2x.png"></a>
         </div>
     </div>
@@ -57,7 +64,9 @@
         <div class="img lmimg"></div>
         <p class="des lm">顶级画质，华丽特效！打响部落联盟之战！</p>
         <div class="join lm">
-            <span class="numlm">34867 </span> 人参加
+            <div>
+                <span class="numlm">34867</span>人参加
+            </div>
             <a class="lianmeng">点击进入游戏<img src="img/more_icon@2x.png"></a>
         </div>
     </div>
