清明节活动页面完善，增加背景音乐控制与分享

--- a/qingming2017/index.html
+++ b/qingming2017/index.html
@@ -5,9 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1, minimum-scale=1,user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>一株佛心莲花，寄予思念</title>
-	<embed src="" type="">
 	<link rel="stylesheet" href="css/index.css">
-	<link rel="stylesheet" href="css/font.TTF">
 	<script src="js/flexible.js"></script>
 	<script src="js/jquery.js"></script>
 	<script src="js/fastclick.js"></script>
@@ -15,7 +13,12 @@
 	<script src="js/index.js"></script>
 </head>
 <body>
+	<div class="musicbtn">
+		<img src="img/music_on@2x.png"/>
+	</div>
 	<div class="index page1">
+		<audio class="music" src="css/music.mp3" loop="loop"></audio>
+		
 		<div class="rain"></div>
 		<div class="rain1"></div>
 		<div class="rain2"></div>
@@ -29,7 +32,7 @@
 
 	 <div class="index page2 hidden">
 		<div class="top">
-			您种下了第<span class="num">68756</span>株佛心莲
+			您种下了第<span class="num">0</span>株佛心莲
 		</div>
 		<div class="des">千灯万盏，不如心灯一盏。</div>	 
 		
@@ -44,15 +47,9 @@
 		</div>  
 		<div class="foot"></div>    
 		<div class="weixin hidden">
-			<div class="qr"></div>
-			<div class="ad">广告</div>			
+			<div class="qr"></div>			
 		</div>
 	</div> 
-
-
-
-
-
 
 	<div class="showShareMask hidden">
   		<div class="shareArrow"></div>
@@ -95,5 +92,6 @@
 				}
 			});
 		</script>
+		<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1261564228'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1261564228' type='text/javascript'%3E%3C/script%3E"));</script>
 </body>
 </html>
