--- a/qingming2017/index.html
+++ b/qingming2017/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1, minimum-scale=1,user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>一株佛心莲花，寄予思念</title>
+	<title>一株佛心莲，寄予思念</title>
 	<link rel="stylesheet" href="css/index.css">
 	<script src="js/flexible.js"></script>
 	<script src="js/jquery.js"></script>
@@ -16,12 +16,29 @@
 	<div class="musicbtn">
 		<img src="img/music_on@2x.png"/>
 	</div>
+	<div class="circle2 yq11"></div>
+	<div class="circle2 yq22"></div>
+	<div class="circle2 yq33"></div>
+	<div class="circle2 yq44"></div>
+	<div class="circle2 yq55"></div>
+
+	<div class="circle3 yq111"></div>
+	<div class="circle3 yq222"></div>
+	<div class="circle3 yq333"></div>
+	<div class="circle3 yq444"></div>
+	<div class="circle3 yq555"></div>		
+	
+	
 	<div class="index page1">
-		<audio class="music" src="css/music.mp3" loop="loop"></audio>
+		<audio class="music" src="css/music.mp3" loop="loop" autoplay="autoplay"></audio>
 		
 		<div class="rain"></div>
 		<div class="rain1"></div>
 		<div class="rain2"></div>
+		<!--<div class="rain3"></div>
+		<div class="rain4"></div>
+		<div class="rain5"></div>
+		<div class="rain6"></div>-->
 		
 		<div class="center"></div>    
 		<div class="btn">
@@ -47,7 +64,10 @@
 		</div>  
 		<div class="foot"></div>    
 		<div class="weixin hidden">
-			<div class="qr"></div>			
+			<div class="qr">
+				<img class="btnwx" src="img/BEN4@2x.png" alt="">
+				<img class="imgwx" src="img/focus@2x.png" alt="">
+			</div>			
 		</div>
 	</div> 
 
