--- a/qingming2017/index.html
+++ b/qingming2017/index.html
@@ -4,12 +4,14 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1, minimum-scale=1,user-scalable=no">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta content="yes" name="apple-mobile-web-app-capable">
 	<title>一株佛心莲，寄予思念</title>
 	<link rel="stylesheet" href="css/index.css">
 	<script src="js/flexible.js"></script>
 	<script src="js/jquery.js"></script>
 	<script src="js/fastclick.js"></script>
 	<script src="js/wnl-util.js"></script>
+	<script src="js/html2canvas.js"></script>
 	<script src="js/index.js"></script>
 </head>
 <body>
@@ -47,30 +49,41 @@
 		<div class="foot"></div>   
 	</div>    
 
+	<!--结果页-->
 	 <div class="index page2 hidden">
-		<div class="top">
-			您种下了第<span class="num">0</span>株佛心莲
+		<div class="top1">
+			<div class="top">
+			您种下了第<span class="num">34454</span>株佛心莲
+			</div>
+			<div class="des">千灯万盏，不如心灯一盏。</div>	 
+			<div class="center"></div>
+			<div class="bottom">
+				<div class="title">佛曰：</div>
+				<div class="text p1">每个人所见所遇到的都早有安排，一切都是缘。缘起缘灭，缘聚缘散，一切都是天意。</div>
+			</div>
+
+			<div class="weixin">
+				<img class="qrwx hidden" src="img/qrcode.png" alt="">
+				<!--<img class="qrimg hidden" src="img/QR@2x.png" alt="">		-->
+			</div>	 
 		</div>
-		<div class="des">千灯万盏，不如心灯一盏。</div>	 
+
+		<div class="imgpage2"></div>
+		<div class="sharepic"></div>
 		
-		<div class="center"></div>
-		<div class="bottom">
-			<div class="title">佛曰：</div>
-			<div class="text p1">每个人所见所遇到的都早有安排，一切都是缘。缘起缘灭，缘聚缘散，一切都是天意。</div>
-		</div>	
-		<div class="btns">
-			<button class="again"></button>
-			<button class="share"></button>
-		</div>  
-		<div class="foot"></div>    
-		<div class="weixin hidden">
-			<div class="qr">
-				<img class="btnwx" src="img/BEN4@2x.png" alt="">
-				<img class="imgwx" src="img/focus@2x.png" alt="">
-			</div>			
+
+
+		<!--按钮部分-->
+		<div class="pagefoot">
+			<div class="btns">
+				<button class="again"></button>
+				<button class="share"></button>
+			</div>  
+			<div class="foot"></div>
 		</div>
 	</div> 
 
+	
 	<div class="showShareMask hidden">
   		<div class="shareArrow"></div>
   	</div>
