谷雨活动完善，改变跳转方式

--- a/guyu2017/index.html
+++ b/guyu2017/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1, minimum-scale=1,user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta content="yes" name="apple-mobile-web-app-capable">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <title>得雨而生</title>
     <link rel="stylesheet" href="css/index.css">	
 </head>
@@ -26,7 +27,9 @@
     
     <!--结果页-->
     <div class="index page1 hidden">
-        <div class="top1"></div>
+        <div class="top1">
+            <div class="shadow"></div>                 
+        </div>
         <div class="longpress">
             <img src="img/save.png" alt="">
         </div>
@@ -36,17 +39,7 @@
             <button class="click hidden"></button>                                    
         </div>
         <div class="tree"></div>
-        <!--<div class="bottom"></div>        -->
     </div>
-
-    <!--广告页
-    <div class="index page2 hidden">
-        <div class="top2"></div>
-        <div class="foot2">
-            <button class="again1">再领一张</button>
-            <button class="share1">分享</button>            
-        </div>
-    </div>-->
     
     <!--微信分享-->
     <div class="showShareMask hidden">
