图片修改、动画修改

--- a/guyu2017/index.html
+++ b/guyu2017/index.html
@@ -13,22 +13,22 @@
     <div class="index page">
         <div class="top">
             <div class="water"></div>
+            <div class="bird">
+                <img src="img/bird.png" alt="">  
+            </div> 
         </div>
         <div class="foot">
             <button class="btn"></button>
         </div>
         <div class="icon">
             <img src="img/wnlicon .png" alt="">
-        </div>
-        <div class="bird">
-            <img src="img/bird.png" alt="">  
-        </div>        
+        </div>       
     </div>
     
     <!--结果页-->
     <div class="index page1 hidden">
         <div class="top1">
-            <div class="shadow"></div>                 
+            <div class="shadow hidden"></div>                 
         </div>
         <div class="longpress">
             <img src="img/save.png" alt="">
