--- a/pay/index.html
+++ b/pay/index.html
@@ -9,9 +9,11 @@
     <meta name="description" content="">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
-    <title>分期付</title>
+    <title>还在为买东西焦头烂额？快来万年历看看吧！</title>
+     <script src="js/flexible.js"></script> 
     <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="swiper.min.css">    
+    <link rel="stylesheet" href="swiper.min.css">  
+    <!-- <script src="js/jquery.share.min"></script> -->
 </head>
 <body>
      <div id="content"> 
@@ -39,7 +41,7 @@
                     <p class="p1">"易钱庄"是深圳市融信信息咨询有限公司为有资金需求的客户和从事贷款行业的一线信贷经理打造的双向互动选择平台</p>    
                 </div> 
                 <button>进入</button>   
-            </div><hr size="1"/></a>
+            </div><div class="hr"></div></a>
 
             <a href="http://www.007fenqi.com/"><div class="data cont2">
                 <div class="hot"><img src="img/fqf-hot-img@3x.png" alt=""></div>  
@@ -50,7 +52,7 @@
                     <p class="p2">年轻人分期购物、信用贷款、小额贷款的首选平台.</p>    
                 </div> 
                 <button>进入</button>    
-            </div><hr size="1"/></a>
+            </div><div class="hr"></div></a>
 
             <a href="http://qd.qufenqi.com/"><div class="data cont3">
                 <div class="opa"></div>                
@@ -61,7 +63,7 @@
                 </div> 
                 <button>进入</button>    
             </div></a>
-            <hr id="align" size="1"/>
+            <div id="align"></div>
 
             <div class="more">
                 <button>更多</button>
@@ -75,7 +77,7 @@
                     <p class="p4">千万用户信赖的借款投资平台</p>    
                 </div> 
                 <button>进入</button>    
-            </div><hr size="1"/></a>
+            </div><div class="hr"></div></a>
 
             <a href="https://www.yooli.com/?sid=6&aid=%E6%A0%87%E9%A2%98&forceRecord=1&utm_source=baidu&utm_medium=pp&utm_term=&utm_content=&utm_campaign=" class=""><div class="data cont5">
                 <div class="opa"></div>                
@@ -85,17 +87,17 @@
                     <p class="p5">国内专业的互联网理财平台</p>    
                 </div> 
                 <button>进入</button>    
-            </div><hr size="1"/></a>
+            </div><div class="hr"></div></a>
 
             <a href="https://www.yirendai.com/?utm_source=bd-pc-pz&utm_campaign=wyzq&utm_content=toubu" class=""><div class="data cont6">
                 <div class="opa"></div>                
                 <div class="yj"><img src="img/yrd.jpg" alt=""></div>
                 <div class="desc d6">
                     <p class="bt">宜人贷</p>
-                    <p class="p6">在线免费注册申请,未促成不收取费用</p>    
+                    <p class="p6">在线免费注册申请,未促成不收取任何费用</p>    
                 </div> 
                 <button>进入</button>    
-            </div><hr size="1"/></a>
+            </div><div class="hr"></div></a>
 
             <a href="http://www.kaola.com/activity/detail/20857.shtml?tag=e1999891ea976e2f8c8de7f8c6644fdc&__da_7cd80f92_5757bba098033c81" class=""><div class="data cont7">
                 <div class="opa"></div>                
@@ -105,7 +107,7 @@
                     <p class="p7">海淘就来考拉海购网易自营,全球尖货一键下单,2017海淘,全品类享海外批发价!</p>    
                 </div> 
                 <button>进入</button>    
-            </div><hr size="1"/></a>
+            </div><div class="hr"></div></a>
 
             <!-- <a href="" class="hidden"><div class="data cont8">
                 <img src="" alt="">
@@ -114,22 +116,23 @@
                     <p class="p8">内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容内容</p>    
                 </div> 
                 <button>进入</button>    
-            </div><hr size="1"/></a>  -->
+            </div><div class="hr"></div></a>  -->
             
-
            <div class="pull">
                <div class="left"></div>到底了 : )<div class="right"></div>               
            </div>
 
         </div>
      </div> 
+
     <!--微信分享-->
-     <!-- <div class="showShareMask hidden">
+    <!-- <div class="showShareMask hidden">
   		<div class="shareArrow"></div>
-  	</div> -->
-<!-- wnl share tool -->
-     <div class="sharemask hidden"></div>        
-  	<div class="wnl-sharetool hidden">
+  	</div>
+    <div class="sharemask hidden"></div> -->
+	
+    <!-- 万年历分享 -->
+  	<!-- <div class="wnl-sharetool hidden">
   	   <div class="platform">
   		   <label class="weixin">微信</label>
   		   <label class="weixin_circle">朋友圈</label>
@@ -137,96 +140,126 @@
   		   <label class="weibo">新浪微博</label>
   	   </div>
   	   <div class="cancle-share">取消分享</div>
-  	</div>
-
+  	</div> -->
     <script src="js/jquery.min.js"></script>
-    <script src="js/flexible.js"></script>
-	<script src="js/fastclick.js"></script>
-     <script src="js/wnl-util.js"></script> 
+    <script src="js/zepto-fastclick.min.js"></script>
+    <!-- <script src="js/flexible.js"></script> -->
+	<!-- <script src="js/fastclick.js"></script> -->
      <script src="js/swiper.min.js"></script> 
-     <script src="js/swiper.jquery.js"></script>   
-     <script>
+<script src="js/wnl-util.js"></script>          
+     <!-- <script src="js/swiper.jquery.js"></script>    -->
+<script>
+　　var mySwiper = new Swiper ('.swiper-container', {
+　　　　 loop: true,
+　      continuous: true,
+        disableScroll: true,
+        spaceBetween: 5,
+        slidesPerView: 'auto',
+        initialSlide: 0,
+        centeredSlides: true
+　　})
+</script>   
+ <!-- <script src="js/wnl-share.js"></script>       -->
+<script>
+    //客户端分享
+    // var sharetitle = "还在为买东西焦头烂额？快来万年历看看吧！";
+    // var shareUrl = 'https://mobile.51wnl.com/temporary/pay2017/index.html';
+    // var sharetext = "涵盖所有的分期购物平台，海量商品全放进你的口袋，还犹豫什么，赶快点击我！";
+    // var shareimgUrl = "https://mobile.51wnl.com/temporary/pay2017/img/share.jpg";
+    // wnlShare.setShareData({
+    //     title: sharetitle,
+    //     text: sharetext,
+    //     image:shareimgUrl,
+    //     url: shareUrl
+    // });
+    // // wnlShare.showSharePlatform();
+    // // shareCallback() //分享回调
+    // function shareCallback(state, platform) {
+    // var text = platform + "  分享" + (state == 1 ? "成功!" : "失败!");
+// }
+    // var title = "还在为买东西焦头烂额？快来万年历看看吧！";
+    // var localUrl=location.href.replace('home','index');
+    // var text = "涵盖所有的分期购物平台，海量商品全放进你的口袋，还犹豫什么，赶快点击我！";
+    // var imgUrl = "http://mobile.51wnl.com/temporary/pay2017/img/share.jpg";
+    // var textObj = {
+    //     title: title,
+    //     text:title,
+    //     image: '0',
+    //     imageURL:imgUrl,
+    //     url: localUrl,
+    //     pureText: text,
+    //     prefix: ""
+    // };
+    // var textObj1 = {
+    //     title:title,
+    //     text: text,
+    //     image:'0',
+    //     imageURL:imgUrl,
+    //     targetUrl: localUrl,
+    //     perfix: ""
+    // };
 
-    　　var mySwiper = new Swiper ('.swiper-container', {
-    　　　　loop: true,
-　          continuous: true,
-            disableScroll: true,
-            spaceBetween: 5,
-            slidesPerView: 'auto',
-            initialSlide: 0,
-            centeredSlides: true
-    　　})
-
-    </script>             
-    <script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
-	<script>
-        $.ajax({
-            url: "https://b.cqyouloft.com/interface/API/weixinhandler.ashx",
-            type: 'get',
-            data: {
-                requesturl: location.href
-            },
-            success: function(result) {
-                result = JSON.parse(result);
-                wx.config({
-                    debug: false,
-                    appId: 'wx347ab26567c5465f', // 必填，公众号的唯一标识
-                    timestamp: result.timestamp, // 必填，生成签名的时间戳
-                    nonceStr: result.nonceStr, // 必填，生成签名的随机串
-                    signature: result.signature, // 必填，签名，见附录1
-                    jsApiList: [
-                            'onMenuShareTimeline',
-                            'onMenuShareAppMessage',
-                            'onMenuShareQQ',
-                            'onMenuShareWeibo'
-                        ] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
-                });
-            }
-        });
+    // function appCallback_share() {
+    //     try {
+    //         if (window.ylwindow) {
+    //             ylwindow.reportHasShare(true);
+    //             location.href = "protocol://share:" + encodeURI(JSON.stringify(textObj1));
+    //         } else {
+    //             location.href = "protocol://share#" + encodeURI(JSON.stringify(textObj));
+    //         }
+    //     } catch (e) {}
+    //     return 1;
+    // }
+    
+</script> 
+<script>
+    window._bd_share_config = {
+        common : {
+            "bdSnsKey" : {},
+            "bdText" : '还在为买东西焦头烂额？快来万年历看看吧！',
+            "bdDesc" : '涵盖所有的分期购物平台，海量商品全放进你的口袋，还犹豫什么，赶快点击我！',
+            "bdUrl" : 'http://mobile.51wnl.com/temporary/pay2017/index.html',
+            "bdPic" : 'http://mobile.51wnl.com/temporary/pay2017/img/share.jpg'
+        },
+        share : [{
+            "bdSize" : 32
+        }]
+    };
+    with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?cdnversion='+~(-new Date()/36e5)];
+    // window.share = {
+    //     url: 'http://mobile.51wnl.com/temporary/pay2017/index.html',
+    //     title: '还在为买东西焦头烂额？快来万年历看看吧！',
+    //     description: '涵盖所有的分期购物平台，海量商品全放进你的口袋，还犹豫什么，赶快点击我！'
+    // }
 </script>
-<!-- <script>
-     var title = "还在为买东西焦头烂额？快来万年历看看吧！";
-        var localUrl=location.href.replace('home','index');
-        var text = "涵盖所有的分期购物平台，海量商品全放进你的口袋，还犹豫什么，赶快点击我！";
-        // var text = "涵盖所有的分期购fte击我！"
-        var imgUrl = "http://coco70.51wnl.com/numberologynew/pay2017/img/share.jpg";
-        var textObj = {
-            title: title,
-            // title: "还在为买东西焦头烂额？快来万年历看看吧！",
-            text: text,
-            // text:"涵盖所有的分期购物平台，海量商品全放进你的口袋，还犹豫什么，赶快点击我！",
-            image: '0',
-            imageURL:imgUrl,
-            url: localUrl,
-            // puretext: text,
-            pureText: '涵盖所有的分期购物平台，海量商品全放进你的口袋，还犹豫什么，赶快点击我！',
-            prefix: ""
-        };
-        var textObj1 = {
-            title:title,
-            // title:"还在为买东西焦头烂额？快来万年历看看吧！",
-            text: text,
-            // text: '涵盖所有的分期购物平台，海量商品全放进你的口袋，还犹豫什么，赶快点击我！',
-            image:'0',
-            imageURL:imgUrl,
-            targetUrl: localUrl,
-            perfix: ""
-        };
-
-        function appCallback_share() {
-            try {
-                if (window.ylwindow) {
-                    ylwindow.reportHasShare(true);
-                    location.href = "protocol://share:" + encodeURI(JSON.stringify(textObj1));
-                } else {
-                    location.href = "protocol://share#" + encodeURI(JSON.stringify(textObj));
-                }
-            } catch (e) {}
-            return 1;
+<script src="https://res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>    
+<script>
+    //微信分享
+    $.ajax({
+        url: "https://b.cqyouloft.com/interface/API/weixinhandler.ashx",
+        type: 'get',
+        data: {
+            requesturl: location.href
+        },
+        success: function(result) {
+            result = JSON.parse(result);
+            wx.config({
+                debug: false,
+                appId: 'wx347ab26567c5465f', // 必填，公众号的唯一标识
+                timestamp: result.timestamp, // 必填，生成签名的时间戳
+                nonceStr: result.nonceStr, // 必填，生成签名的随机串
+                signature: result.signature, // 必填，签名，见附录1
+                jsApiList: [
+                        'onMenuShareTimeline',
+                        'onMenuShareAppMessage',
+                        'onMenuShareQQ',
+                        'onMenuShareWeibo'
+                    ] // 必填，需要使用的JS接口列表，所有JS接口列表见附录2
+            });
         }
-
-</script>    -->
-    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1261564228'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1261564228' type='text/javascript'%3E%3C/script%3E"));</script> 
-    <script src="js/index.js"></script>
+    });
+</script>     
+<script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1261564228'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1261564228' type='text/javascript'%3E%3C/script%3E"));</script> 
+<script src="js/index.js"></script> 
 </body>
 </html>
