--- a/topic/index.html
+++ b/topic/index.html
@@ -24,12 +24,16 @@
 </head>
 <body>
     <div class="problem">
-        <p>#爱情，应该是互补还是相似的两个人在一起呢? </p>      
+        <p></p>      
     </div>
     <div class="choose">请选择你的观点</div>    
     <div class="v">
-        <div class="xs"><div class="xs1"><div class="xs2"><span>相似<span></div></div></div>
-        <div class="hb"><div class="hb1"><div class="hb2"><span>互补<span></div></div></div>
+        <div class="xs"></div>
+        <div class="change">
+             <div class="left"></div> 
+            <div class="right"><div class="right1"></div></div>
+        </div>
+        <div class="hb"></div>
     </div>
     <div class="fb">发表的观点</div><hr size='1' style="opacity:0.3;margin-bottom:15px"/> 
 
@@ -77,7 +81,6 @@
   	   <div class="cancle-share">取消分享</div>
     </div>
     
-
 
     <script src="js/wnl-util.js"></script>
     <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1261564228'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1261564228' type='text/javascript'%3E%3C/script%3E"));</script>                
