新增不同数据

--- a/topic/index.html
+++ b/topic/index.html
@@ -61,13 +61,13 @@
 
 
     <div class="llsBanner">
-        <a class="closeBanner" href="javascript:void(0)"></a>
+        <!-- <a class="closeBanner" href="javascript:void(0)"></a>
         <div class="llslogo"></div>
         <div class="lls">
             <div class="title">莉莉丝</div>
             <div class="des1">换一种方式认识自己</div>
         </div>
-        <a class="downloadBtn" href="javascript:void(0)">立即体验</a>
+        <a class="downloadBtn" href="javascript:void(0)">立即体验</a> -->
     </div>
 
     <!-- 万年历内分享 -->
