--- a/topic/index.html
+++ b/topic/index.html
@@ -23,67 +23,44 @@
     </style>
 </head>
 <body>
-    <div class="problem">
-        <p></p>      
-    </div>
-    <div class="choose">请选择你的观点</div>    
-    <div class="v">
-        <div class="xs"></div>
-        <div class="change">
-             <div class="left"></div> 
-            <div class="right"><div class="right1"></div></div>
+        <div class="problem">
+            <p></p>      
         </div>
-        <div class="hb"></div>
-    </div>
-    <div class="fb">发表的观点</div><hr size='1' style="opacity:0.3;margin-bottom:15px"/> 
+        <div class="choose">请选择你的观点</div>    
+        <div class="v">
+            <div class="xs"></div>
+            <div class="change">
+                <div class="left"></div> 
+                <div class="right"><div class="right1"></div></div>
+            </div>
+            <div class="hb"></div>
+        </div>
+        <div class="fb">发表的观点</div><hr size='1' style="opacity:0.3;margin-bottom:15px"/> 
 
-    <div class="content">
-        <!-- <div class="person">
-            <div class="user_head"></div>
-            <div class="zl">
-                <div class="xq">
-                    <p class="username">星座达人</p>
-                    <p class="xz"><img src="img/topic-female-icon@2x.png" alt=""><span class="user_xz">双子座</span></p>
-                </div>
-                <div class="time">
-                    <span>5分钟前</span>    
-                </div><div class="none"></div> 
-                <div class="tp">投票给：相似更好，因为可以更好地理解对方</div> 
-                <div class="gd">Ta的观点 : 相似的人更容易相处吧</div>
-                <div class="dz"><img src="img/topic-like-icon@2x.png" alt="" class="dz_icon"><span class="dz_count">235</span></div>
-                <div class="hf"><img src="img/topic-talking-icon@2x.png" alt="" class="hf_icon"><span class="hf_count">167</span></div>
-                <div class="pl"><p>张三：还好啦，其实只要好好相处我觉得两个人还是挺好的，不需要太在意其他。</p><p>李四：我觉得都行吧</p><p>查看全部评论167条</p></div>                 
-            </div>      
-         </div><hr size='1' style="opacity:0.3"/>  -->
-
-    </div><hr size='1' style="opacity:0.3"/>
-    <div class="more hidden">展开更多</div><hr size='1' style="opacity:0.3"/>
-
-
+        <div class="content">
+            <!-- <div class="person">
+                <div class="user_head"></div>
+                <div class="zl">
+                    <div class="xq">
+                        <p class="username">星座达人</p>
+                        <p class="xz"><img src="img/topic-female-icon@2x.png" alt=""><span class="user_xz">双子座</span></p>
+                    </div>
+                    <div class="time">
+                        <span>5分钟前</span>    
+                    </div><div class="none"></div> 
+                    <div class="tp">投票给：相似更好，因为可以更好地理解对方</div> 
+                    <div class="gd">Ta的观点 : 相似的人更容易相处吧</div>
+                    <div class="dz"><img src="img/topic-like-icon@2x.png" alt="" class="dz_icon"><span class="dz_count">235</span></div>
+                    <div class="hf"><img src="img/topic-talking-icon@2x.png" alt="" class="hf_icon"><span class="hf_count">167</span></div>
+                    <div class="pl"><p>张三：还好啦，其实只要好好相处我觉得两个人还是挺好的，不需要太在意其他。</p><p>李四：我觉得都行吧</p><p>查看全部评论167条</p></div>                 
+                </div>      
+            </div><hr size='1' style="opacity:0.3"/>  -->
+        </div>
     <div class="llsBanner">
-        <!-- <a class="closeBanner" href="javascript:void(0)"></a>
-        <div class="llslogo"></div>
-        <div class="lls">
-            <div class="title">莉莉丝</div>
-            <div class="des1">换一种方式认识自己</div>
-        </div>
-        <a class="downloadBtn" href="javascript:void(0)">立即体验</a> -->
-    </div>
-
-    <!-- 万年历内分享 -->
-  	<div class="wnl-sharetool hidden">
-  	   <div class="platform">
-  		   <label class="weixin">微信好友</label>
-  		   <label class="weixin_circle">朋友圈</label>
-  		   <!-- <label class="qq">QQ</label>
-  		   <label class="weibo">新浪微博</label> -->
-  	   </div>
-  	   <div class="cancle-share">取消分享</div>
-    </div>
-    
-
-    <script src="js/wnl-util.js"></script>
-    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1261564228'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1261564228' type='text/javascript'%3E%3C/script%3E"));</script>                
+        <img src="./img/download-pic@3x.jpg">
+    </div>        
+        
+    <script src="js/openapp.js"></script>
     <script src="js/index.js"></script>          
 </body>
 </html>
