--- a/topic/index.html
+++ b/topic/index.html
@@ -24,7 +24,9 @@
 </head>
 <body>
         <div class="problem">
-            <p></p>      
+            <img src="">
+            <p></p>
+            <div class="shadow"></div>
         </div>
         <div class="choose">请选择你的观点</div>    
         <div class="v">
@@ -56,10 +58,10 @@
                 </div>      
             </div><hr size='1' style="opacity:0.3"/>  -->
         </div>
-    <div class="llsBanner">
-        <img src="./img/download-pic@3x.jpg">
-    </div>        
-        
+    <a href="javascript:void(0)" id="llsBanner">
+        <img src="img/download-pic@3x.jpg">
+    </a>        
+    <script type="text/javascript">var cnzz_protocol = (("https:" == document.location.protocol) ? " https://" : " http://");document.write(unescape("%3Cspan id='cnzz_stat_icon_1261564228'%3E%3C/span%3E%3Cscript src='" + cnzz_protocol + "s95.cnzz.com/z_stat.php%3Fid%3D1261564228' type='text/javascript'%3E%3C/script%3E"));</script>     
     <script src="js/openapp.js"></script>
     <script src="js/index.js"></script>          
 </body>
