--- a/aboutUs/index.html
+++ b/aboutUs/index.html
@@ -20,12 +20,13 @@
 </head>
 <body>
     <div class="app_icon"></div>
-    <div class="version">版本号： 1.0</div>
+    <div class="version">版本号： 1.5</div>
     <div class="contact">
-        <div class="wx"><a href="http://weixin.qq.com/r/OEzUzGjEzTWyrSyv9xkq">微信： 搜索"暗月莉莉丝"</a></div>
+        <div class="wx">微信： 搜索"暗月莉莉丝"</div>
         <div class="yx"><a href="mailto:lilith@youloft.com">邮箱： lilith@youloft.com</a></div>
         <div class="wb"><a href="http://weibo.com/3898047265">微博： Lilith星座</a></div>
-        <div class="qq"><a href="//shang.qq.com/wpa/qunwpa?idkey=222ac03f03170f6610d3171c8476231c575897c7ec2d071b1a9846f8b10b8354">QQ群： 180275927</a></div>
+        <!-- <div class="qq"><a href="//shang.qq.com/wpa/qunwpa?idkey=222ac03f03170f6610d3171c8476231c575897c7ec2d071b1a9846f8b10b8354">QQ群： 180275927</a></div> -->
+        <div class="qq"><a href="https://jq.qq.com/?_wv=1027&k=4E937cG">QQ群： 180275927</a></div>        
     </div>
     <div class="foot">
         <div class="company">重庆可兰达科技有限公司</div>
@@ -34,12 +35,9 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/index.js"></script>
     <script>
-        // var comleft = (document.body.clientWidth - $('.company').width()) / 2;
         var copyleft = (document.body.clientWidth - $('.copyright').width()) / 2;        
-        // $('.company').css('marginLeft',comleft);
         $('.copyright').css('marginLeft',copyleft);        
 </script>
-<!-- <script src="http://tjs.sjs.sinajs.cn/open/api/js/wb.js?appkey=YOUR APPKEY" type="text/javascript" charset="utf-8"></script> -->
 <script src="js/index.js"></script>
 </body>
 </html>
